@@ -1,13 +1,33 @@
 package org.zmz.c.service.dataopen.sqltype;
 
-import com.google.common.collect.Sets;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.BeanUtils;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.ObjectUtils;
+import org.zmz.c.qo.dataopen.Column;
 import org.zmz.c.qo.dataopen.Constants;
 import org.zmz.c.qo.dataopen.DatasetColumnQo;
+import org.zmz.c.qo.dataopen.DatasetConditionQo;
+import org.zmz.c.qo.dataopen.MetricsDimensionPathVo;
+import org.zmz.c.qo.dataopen.ModelInfo;
+import org.zmz.c.qo.dataopen.ObjKeyColumnRelaVo;
+import org.zmz.c.qo.dataopen.ObjKeyTableRelaVo;
+import org.zmz.c.qo.dataopen.OrgDimension;
+import org.zmz.c.qo.dataopen.OutPutMode;
 import org.zmz.c.qo.dataopen.SubQuerySqlQo;
+import org.zmz.c.service.dataopen.dataset.SqlComponent;
+import org.zmz.c.service.dataopen.dataset.SqlFuncEnum;
+import org.zmz.c.service.dataopen.sql.AbstractSqlParser;
+import org.zmz.c.service.dataopen.sql.SqlParserFactory;
+import org.zmz.c.service.dataopen.sqlfunc.AbstractFuncParser;
+import org.zmz.c.service.dataopen.sqlfunc.PeriodExpression;
+import org.zmz.c.service.dataopen.sqlfunc.SqlBuilderFactory;
+import org.zmz.c.utils.AcctTimeUtil;
+import org.zmz.c.utils.BuildSqlUtil;
+import org.zmz.c.utils.KeyValues;
+import org.zmz.c.utils.OrganizationUtil;
+import org.zmz.c.utils.SqlConvertUtils;
+import org.zmz.c.utils.SqlUtils;
 import org.zmz.c.vo.dataopen.dataset.ResultSql;
 
 import java.util.ArrayList;
@@ -33,19 +53,22 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
     /**
      * 主视图分别与子查询拼接(即有相对维度的度量和同环比(月/年累计))
      *
-     * @param result 返回sql集
-     * @param metrics 分组后的度量
-     * @param columnList 输出字段
+     * @param result             返回sql集
+     * @param metrics            分组后的度量
+     * @param columnList         输出字段
      * @param replaceLevelColumn 层级字段替换
      */
-    protected void appendRelativeMetric(ResultSql result, List<DatasetColumnQo> metrics,
-                                        List<DatasetColumnQo> columnList, List<DatasetConditionQo> condList, OrgDimension replaceLevelColumn) {
+    protected void appendRelativeMetric(ResultSql result,
+                                        List<DatasetColumnQo> metrics,
+                                        List<DatasetColumnQo> columnList,
+                                        List<DatasetConditionQo> condList,
+                                        OrgDimension replaceLevelColumn) {
         boolean mainSlaveTabPeriod = needSlaveTablePeriod(metrics, columnList);
         // 以相对维度字段进行分组 目前最多两组(包含/include,排除/exclude),后续可能冗余fix类型
         Map<List<String>, List<DatasetColumnQo>> dimGroup = getRelativeDimensionGroup(metrics, columnList);
         // 主视图sql(可能没有度量)
         String mainSql = appendSqlConvert(dimGroup.isEmpty() && result.isSingle, metrics,
-            Constants.DimensionType.TYPE_MAIN, columnList, condList, mainSlaveTabPeriod, replaceLevelColumn, result);
+                Constants.DimensionType.TYPE_MAIN, columnList, condList, mainSlaveTabPeriod, replaceLevelColumn, result);
         // 相对维度子查询
         if (MapUtils.isNotEmpty(dimGroup)) {
             List<SubQuerySqlQo> subSqlList = new ArrayList<>();
@@ -53,12 +76,12 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                 String dimensionType = dimGroupEntry.getValue().get(0).getDimensionType();
                 // 相对维度
                 List<DatasetColumnQo> dimensionList = columnList.stream()
-                    .filter(t -> dimGroupEntry.getKey().contains(t.getAlias())).collect(Collectors.toList());
+                        .filter(t -> dimGroupEntry.getKey().contains(t.getAlias())).collect(Collectors.toList());
                 // 相对度量(可能多个相对度量相同维度)
                 List<DatasetColumnQo> relativeMetrics = dimGroupEntry.getValue();
                 boolean subSlaveTabPeriod = needSlaveTablePeriod(relativeMetrics, dimensionList);
                 String subSql = appendSqlConvert(false, relativeMetrics, dimensionType, dimensionList, condList,
-                    subSlaveTabPeriod, replaceLevelColumn, result);
+                        subSlaveTabPeriod, replaceLevelColumn, result);
                 SubQuerySqlQo relativeDimension = new SubQuerySqlQo();
                 relativeDimension.setDimensionList(dimensionList);
                 relativeDimension.setSql(subSql);
@@ -67,18 +90,14 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                 subSqlList.add(relativeDimension);
             }
             result.sqlLists.add(mergeRelativeDims(result.isSingle, columnList, mainSql, subSqlList, replaceLevelColumn,
-                subQueryToTmTab ? result : null));
-        }
-        else {
+                    subQueryToTmTab ? result : null));
+        } else {
             result.sqlLists.add(mainSql);
         }
     }
 
     /**
      * 获取配置向上汇总的层级字段
-     *
-     * @param dimensions
-     * @return
      */
     @Override
     public DatasetColumnQo minLevelColumn(List<DatasetColumnQo> dimensions) {
@@ -86,31 +105,23 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         if (!CollectionUtils.isEmpty(dimensions)) {
             orgDimensions = dimensions.stream().filter(t -> {
                 return null != t.getIsOrgDimension() && t.getIsOrgDimension() > 0 && null != t.getOrgLevel()
-                    && t.getOrgLevel() >= 0;
-            }).collect(Collectors.toList());
+                        && t.getOrgLevel() >= 0;
+            }).toList();
         }
         if (!CollectionUtils.isEmpty(orgDimensions)) {
-            return Collections.min(orgDimensions, new Comparator<DatasetColumnQo>() {
-                @Override
-                public int compare(DatasetColumnQo o1, DatasetColumnQo o2) {
-                    return o1.getOrgLevel() - o2.getOrgLevel();
-                }
-            });
+            return Collections.min(orgDimensions, Comparator.comparingInt(DatasetColumnQo::getOrgLevel));
         }
         return null;
     }
 
     /**
      * 获取配置向上汇总的层级字段
-     *
-     * @param dimensions
-     * @return
      */
     @Override
     public DatasetColumnQo maxLevelColumn(List<DatasetColumnQo> dimensions) {
         for (DatasetColumnQo dimension : dimensions) {
             if (null != dimension.getIsOrgDimension() && dimension.getIsOrgDimension() > 0
-                && KeyValues.YES_VALUE_1.equals(dimension.getAutoLevelGroup())) {
+                    && KeyValues.YES_VALUE_1.equals(dimension.getAutoLevelGroup())) {
                 return dimension;
             }
         }
@@ -121,7 +132,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         List<OrgDimension> orgDimensions = iteratorColumnMap.get(maxLevelColumn.getTableId());
         return orgDimensions.stream().filter(f -> {
             return f.getMetaDataId().equals(maxLevelColumn.getTableId())
-                && (f.getOrgIdColumnCode().equals(maxLevelColumn.getColumnCode())
+                    && (f.getOrgIdColumnCode().equals(maxLevelColumn.getColumnCode())
                     || f.getOrgNameColumnCode().equals(maxLevelColumn.getColumnCode()));
         }).findFirst().orElse(null);
     }
@@ -130,13 +141,12 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
      * 检查维度字段是否有层级字段配置自动向上汇总配置
      *
      * @param dimensions 维度字段
-     * @return true/false
      */
     @Override
     public void hasAutoLevel(List<DatasetColumnQo> dimensions) {
         for (DatasetColumnQo dimension : dimensions) {
             if (null != dimension.getIsOrgDimension() && dimension.getIsOrgDimension() > 0
-                && KeyValues.YES_VALUE_1.equals(dimension.getAutoLevelGroup())) {
+                    && KeyValues.YES_VALUE_1.equals(dimension.getAutoLevelGroup())) {
                 autoLevelGroup = true;
                 break;
             }
@@ -149,31 +159,26 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
             // 遍历找出要替换的层级字段(层级小于等于配置向上汇总的层级字段)
             for (DatasetColumnQo dimension : dimensions) {
                 if (null != dimension.getIsOrgDimension() && dimension.getIsOrgDimension() > 0
-                    && null != dimension.getOrgLevel() && dimension.getOrgLevel() > 0
-                    && null != allModelInfo.get(dimension.getTableId())) {
+                        && null != dimension.getOrgLevel() && dimension.getOrgLevel() > 0
+                        && null != allModelInfo.get(dimension.getTableId())) {
 
                     List<OrgDimension> orgDimensionList = allModelInfo.get(dimension.getTableId()).getBussinessAttr()
-                        .getOrgDimensionList();
+                            .getOrgDimensionList();
 
                     if (!CollectionUtils.isEmpty(orgDimensionList)) {
                         orgDimensionList = orgDimensionList.stream().filter(t -> {
                             return (Integer.parseInt(t.getOrgLevel()) <= currLevelColumn.getOrgLevel()
-                                && Integer.parseInt(t.getOrgLevel()) >= minLevelColumn.getOrgLevel());
+                                    && Integer.parseInt(t.getOrgLevel()) >= minLevelColumn.getOrgLevel());
                         }).collect(Collectors.toList());
                     }
 
                     // 单表模型配置多层级字段的去掉没选到的字段
                     if (!CollectionUtils.isEmpty(orgDimensionList)) {
-                        orgDimensionList.sort(new Comparator<OrgDimension>() {
-                            @Override
-                            public int compare(OrgDimension o1, OrgDimension o2) {
-                                return Integer.parseInt(o2.getOrgLevel()) - Integer.parseInt(o1.getOrgLevel());
-                            }
-                        });
+                        orgDimensionList.sort((o1, o2) -> Integer.parseInt(o2.getOrgLevel()) - Integer.parseInt(o1.getOrgLevel()));
                         List<OrgDimension> finalOrgDimensionList = orgDimensionList;
                         orgDimensionList.forEach(t -> {
                             if (t.getOrgIdColumnCode().equals(dimension.getColumnCode())
-                                || t.getOrgNameColumnCode().equals(dimension.getColumnCode())) {
+                                    || t.getOrgNameColumnCode().equals(dimension.getColumnCode())) {
                                 t.setMetaDataId(dimension.getTableId());
                                 iteratorColumnMap.put(dimension.getTableId(), finalOrgDimensionList);
                             }
@@ -187,52 +192,49 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
     /**
      * 是对维度分组
      *
-     * @param metrics 度量
+     * @param metrics       度量
      * @param dimensionList 所有维度
      * @return 分组维度
      */
     @Override
     protected Map<List<String>, List<DatasetColumnQo>> getRelativeDimensionGroup(List<DatasetColumnQo> metrics,
-        List<DatasetColumnQo> dimensionList) {
+                                                                                 List<DatasetColumnQo> dimensionList) {
         List<DatasetColumnQo> collectFilter = metrics.stream().filter(t -> {
             return Constants.APP_TYPE_METRICS.equalsIgnoreCase(t.getAppType())
-                && StringUtils.isNotBlank(t.getDimensionType())
-                && !Constants.DimensionType.TYPE_MAIN.equals(t.getDimensionType());
-        }).collect(Collectors.toList());
+                    && StringUtils.isNotBlank(t.getDimensionType())
+                    && !Constants.DimensionType.TYPE_MAIN.equals(t.getDimensionType());
+        }).toList();
         if (!CollectionUtils.isEmpty(collectFilter)) {
-            List<String> metricsAlias = metrics.stream().map(DatasetColumnQo::getAlias).collect(Collectors.toList());
-            Map<List<String>, List<DatasetColumnQo>> dimGroup = collectFilter.stream()
-                .collect(Collectors.groupingBy(t -> {
-                    List<String> aliasList = Arrays.asList(t.getColumnExpression().split(","));
-                    return dimensionList.stream().filter(c -> {
-                        if (metricsAlias.contains(c.getAlias())) {
-                            return true;
-                        }
-                        else if (t.getDimensionType().equalsIgnoreCase(Constants.DimensionType.TYPE_INCLUDE)) {
-                            return aliasList.contains(c.getAlias());
-                        }
-                        else if (t.getDimensionType().equalsIgnoreCase(Constants.DimensionType.TYPE_EXCLUDE)) {
-                            return !aliasList.contains(c.getAlias());
-                        }
-                        return false;
-                    }).map(DatasetColumnQo::getAlias).collect(Collectors.toList());
-                }));
-            return dimGroup;
+            List<String> metricsAlias = metrics.stream().map(DatasetColumnQo::getAlias).toList();
+            return collectFilter.stream()
+                    .collect(Collectors.groupingBy(t -> {
+                        List<String> aliasList = Arrays.asList(t.getColumnExpression().split(","));
+                        return dimensionList.stream().filter(c -> {
+                            if (metricsAlias.contains(c.getAlias())) {
+                                return true;
+                            } else if (t.getDimensionType().equalsIgnoreCase(Constants.DimensionType.TYPE_INCLUDE)) {
+                                return aliasList.contains(c.getAlias());
+                            } else if (t.getDimensionType().equalsIgnoreCase(Constants.DimensionType.TYPE_EXCLUDE)) {
+                                return !aliasList.contains(c.getAlias());
+                            }
+                            return false;
+                        }).map(DatasetColumnQo::getAlias).collect(Collectors.toList());
+                    }));
         }
-        return MapUtils.EMPTY_MAP;
+        return new HashMap<>();
     }
 
     /**
      * 主视图与相对维度视图合并
      *
      * @param dimensionList 维度
-     * @param mainSql 主视图sql
-     * @param subSqlList 相对视图的sql集合
+     * @param mainSql       主视图sql
+     * @param subSqlList    相对视图的sql集合
      * @return 组装的sql
      */
     @Override
     protected String mergeRelativeDims(boolean singleSql, List<DatasetColumnQo> dimensionList, String mainSql,
-        List<SubQuerySqlQo> subSqlList, OrgDimension replaceLevelColumn, ResultSql result) {
+                                       List<SubQuerySqlQo> subSqlList, OrgDimension replaceLevelColumn, ResultSql result) {
         SqlComponent component = new SqlComponent();
         String mainTb = "tb" + getIncrementTbIndex();
         // 主视图sql
@@ -243,10 +245,9 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
             result.tmpTableNames.put(tmpName, tmpName);
             result.tmpTableSql.put(tmpName, mainSql);
             component.join.append(tmpName).append(SqlUtils.STR_BLANK).append(mainTb);
-        }
-        else {
+        } else {
             component.join.append(SqlUtils.STR_LEFT_BRACKET).append(mainSql).append(SqlUtils.STR_RIGHT_BRACKET)
-                .append(mainTb);
+                    .append(mainTb);
         }
         // 相对视图从表sql拼接
         for (SubQuerySqlQo subQuerySqlQo : subSqlList) {
@@ -258,12 +259,11 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                 result.tmpTableNames.put(tmpName, tmpName);
                 result.tmpTableSql.put(tmpName, subQuerySqlQo.getSql());
                 component.join.append(SqlUtils.SQL_LEFT_JOIN).append(SqlUtils.STR_BLANK).append(tmpName)
-                    .append(SqlUtils.STR_BLANK).append(relativeTb).append(SqlUtils.SQL_ON);
-            }
-            else {
+                        .append(SqlUtils.STR_BLANK).append(relativeTb).append(SqlUtils.SQL_ON);
+            } else {
                 component.join.append(SqlUtils.SQL_LEFT_JOIN).append(SqlUtils.STR_LEFT_BRACKET)
-                    .append(subQuerySqlQo.getSql()).append(SqlUtils.STR_RIGHT_BRACKET).append(relativeTb)
-                    .append(SqlUtils.SQL_ON);
+                        .append(subQuerySqlQo.getSql()).append(SqlUtils.STR_RIGHT_BRACKET).append(relativeTb)
+                        .append(SqlUtils.SQL_ON);
             }
 
             // on关联条件
@@ -272,18 +272,18 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
             appendPathcode(on, mainTb, relativeTb, dimensionList);
             // 层级字段
             if (null != replaceLevelColumn) {
-                if (on.length() > 0) {
+                if (!on.isEmpty()) {
                     on.append(SqlUtils.SQL_AND);
                 }
                 on.append(mainTb).append(SqlUtils.STR_POINT).append(Constants.DATASET_AREA_ID)
-                    .append(SqlUtils.STR_EQUAL).append(relativeTb).append(SqlUtils.STR_POINT)
-                    .append(Constants.DATASET_AREA_ID).append(SqlUtils.SQL_AND).append(mainTb)
-                    .append(SqlUtils.STR_POINT).append(Constants.DATASET_AREA_NAME).append(SqlUtils.STR_EQUAL)
-                    .append(relativeTb).append(SqlUtils.STR_POINT).append(Constants.DATASET_AREA_NAME);
+                        .append(SqlUtils.STR_EQUAL).append(relativeTb).append(SqlUtils.STR_POINT)
+                        .append(Constants.DATASET_AREA_ID).append(SqlUtils.SQL_AND).append(mainTb)
+                        .append(SqlUtils.STR_POINT).append(Constants.DATASET_AREA_NAME).append(SqlUtils.STR_EQUAL)
+                        .append(relativeTb).append(SqlUtils.STR_POINT).append(Constants.DATASET_AREA_NAME);
             }
             List<DatasetColumnQo> relativeDimensionLists = subQuerySqlQo.getDimensionList().stream()
-                .filter(entity -> Constants.APP_TYPE_DIMENSION.equals(entity.getAppType()))
-                .collect(Collectors.toList());
+                    .filter(entity -> Constants.APP_TYPE_DIMENSION.equals(entity.getAppType()))
+                    .toList();
             for (DatasetColumnQo dimensionQo : relativeDimensionLists) {
                 if (autoLevelGroup && isLevelColumn(dimensionQo)) {
                     // 汇总字段不需要重复拼到on条件
@@ -294,11 +294,11 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                         continue;
                     }*/
                 }
-                if (on.length() > 0) {
+                if (!on.isEmpty()) {
                     on.append(SqlUtils.SQL_AND);
                 }
                 on.append(mainTb).append(SqlUtils.STR_POINT).append(dimensionQo.getAlias()).append(SqlUtils.STR_EQUAL)
-                    .append(relativeTb).append(SqlUtils.STR_POINT).append(dimensionQo.getAlias());
+                        .append(relativeTb).append(SqlUtils.STR_POINT).append(dimensionQo.getAlias());
             }
             if (StringUtils.isEmpty(on)) {
                 on.append(" 1=1 ");
@@ -310,7 +310,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
     }
 
     private void appendPathcode(StringBuilder sql, String mainTb, String relativeTb,
-        List<DatasetColumnQo> dimensionList) {
+                                List<DatasetColumnQo> dimensionList) {
         boolean hasOrgId = false;
         DatasetColumnQo orgDimColumn = SqlBuilderHelper.getOrgDimensionMinColumn(getDataPrivCtrlInfo());
         for (DatasetColumnQo dimension : dimensionList) {
@@ -323,47 +323,46 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
             // 为空、则没有拖到组织维度表的字段
             if (!ObjectUtils.isEmpty(orgDimColumn) && !hasOrgId) {
                 sql.append(mainTb).append(SqlUtils.STR_POINT).append(CUSTOM_ORG_ID_ALIAS).append(SqlUtils.STR_EQUAL)
-                    .append(relativeTb).append(SqlUtils.STR_POINT).append(CUSTOM_ORG_ID_ALIAS);
+                        .append(relativeTb).append(SqlUtils.STR_POINT).append(CUSTOM_ORG_ID_ALIAS);
             }
             if (!ObjectUtils.isEmpty(orgDimColumn)) {
-                if (sql.length() > 0) {
+                if (!sql.isEmpty()) {
                     sql.append(SqlUtils.SQL_AND);
                 }
                 sql.append(mainTb).append(SqlUtils.STR_POINT).append(CUSTOM_PATH_CODE_ALIAS).append(SqlUtils.STR_EQUAL)
-                    .append(relativeTb).append(SqlUtils.STR_POINT).append(CUSTOM_PATH_CODE_ALIAS);
+                        .append(relativeTb).append(SqlUtils.STR_POINT).append(CUSTOM_PATH_CODE_ALIAS);
             }
         }
     }
 
     private void mergeRelativeOutField(boolean singleSql, String mainTb, StringBuilder sql,
-        List<DatasetColumnQo> dimensionList, List<SubQuerySqlQo> subSqlList, OrgDimension replaceLevelColumn) {
+                                       List<DatasetColumnQo> dimensionList, List<SubQuerySqlQo> subSqlList, OrgDimension replaceLevelColumn) {
         StringBuilder fields = new StringBuilder();
         // 划小架构表最细粒度字段
         DatasetColumnQo orgDimColumn = SqlBuilderHelper.getOrgDimensionMinColumn(getDataPrivCtrlInfo());
 
-        DatasetColumnQo metric = null;
+        DatasetColumnQo metric;
         if (!CollectionUtils.isEmpty(subSqlList)) {
             metric = subSqlList.get(0).getMetricList().get(0);
-        }
-        else {
+        } else {
             // subSqlList为空，临时fix
             metric = dimensionList.stream().filter(col -> Constants.APP_TYPE_METRICS.equals(col.getAppType()))
-                .findFirst().orElse(dimensionList.get(0));
+                    .findFirst().orElse(dimensionList.get(0));
         }
         boolean hasPeriod = false;
         // 用于计算字段取表达式
         Map<String, StringBuilder> expMap = new HashMap<>();
         StringBuilder hivePeriodDim = new StringBuilder();
         // 不需要注释 的 数据源类型
-        Set<String> ignoreNotesTypeSets = Sets.newHashSet(KeyValues.DS_HIVE, KeyValues.DS_WHALEHOUSE);
+        Set<String> ignoreNotesTypeSets = Set.of(KeyValues.DS_HIVE, KeyValues.DS_WHALEHOUSE);
         for (DatasetColumnQo dimension : dimensionList) {
             // 隐藏字段过滤
             StringBuilder dimSb = new StringBuilder();
             String dbType = getDbType();
             // 单个sql的时候需要注释
             String notes = !ignoreNotesTypeSets.contains(dbType) && singleSql
-                ? SqlBuilderHelper.fieldNotes(dimension.getDataName())
-                : "";
+                    ? SqlBuilderHelper.fieldNotes(dimension.getDataName())
+                    : "";
             // 是否有拖到最细细度组织维度字段
             if (!ObjectUtils.isEmpty(orgDimColumn) && orgDimColumn.getColumnId().equals(dimension.getColumnId())) {
                 haveOrgId(true);
@@ -374,8 +373,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                 Column periodColumn = getPeriodColumnFromMetric(metric, dimension);
                 if (null != periodColumn) {
                     dimSb.append(mainTb).append(SqlUtils.STR_POINT).append(dimension.getAlias());
-                }
-                else {
+                } else {
                     fieldPeriod(dimSb, dimension);
                 }
                 // 缓存
@@ -383,61 +381,54 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                 // hive数据源的账期字段抽取出来放到所有字段最后面
                 if (getDbType().equals(KeyValues.DS_HIVE) && !"O".equals(this.scheduleType)) {
                     hivePeriodDim.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias())
-                        .append(SqlUtils.STR_DOT);
+                            .append(SqlUtils.STR_DOT);
                     continue;
                 }
                 fields.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias()).append(notes)
-                    .append(SqlUtils.STR_DOT);
-            }
-            else if (Constants.APP_TYPE_DIMENSION.equals(dimension.getAppType())) {
+                        .append(SqlUtils.STR_DOT);
+            } else if (Constants.APP_TYPE_DIMENSION.equals(dimension.getAppType())) {
                 // 维度字段
                 if (autoLevelGroup && isLevelColumn(dimension)) {
                     if (dimension.getTableId().equals(replaceLevelColumn.getMetaDataId())
-                        && (dimension.getColumnCode().equals(replaceLevelColumn.getOrgIdColumnCode())
+                            && (dimension.getColumnCode().equals(replaceLevelColumn.getOrgIdColumnCode())
                             || dimension.getColumnCode().equals(replaceLevelColumn.getOrgNameColumnCode()))) {
                         appendLevelColumnField(dimSb, replaceLevelColumn, mainTb);
-                    }
-                    else {
+                    } else {
                         continue;
                     }
                     fields.append(dimSb).append(SqlUtils.STR_DOT);
-                }
-                else {
+                } else {
                     dimSb.append(mainTb).append(SqlUtils.STR_POINT).append(dimension.getAlias());
                     fields.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias()).append(notes)
-                        .append(SqlUtils.STR_DOT);
+                            .append(SqlUtils.STR_DOT);
                 }
-            }
-            else if (Constants.APP_TYPE_METRICS.equals(dimension.getAppType())
-                && CollectionUtils.isEmpty(dimension.getColumnGroup())) {
+            } else if (Constants.APP_TYPE_METRICS.equals(dimension.getAppType())
+                    && CollectionUtils.isEmpty(dimension.getColumnGroup())) {
                 String tabName = mainTb;
                 SqlFuncEnum funcEnum = SqlFuncEnum.getFuncByName(dimension.getFunc());
                 if (SqlBuilderHelper.isGrowth(funcEnum)) {
                     if (CollectionUtils.isEmpty(subSqlList)) {
                         dimSb.append(tabName).append(SqlUtils.STR_POINT).append(dimension.getAlias());
-                    }
-                    else if (funcEnum.equals(SqlFuncEnum.pp)) {
+                    } else if (funcEnum.equals(SqlFuncEnum.pp)) {
                         String subTabName = findRelativeAlias(dimension, subSqlList);
                         String expression = SqlUtils.STR_LEFT_BRACKET + tabName + SqlUtils.STR_POINT
-                            + dimension.getAlias() + "-" + subTabName + SqlUtils.STR_POINT + dimension.getAlias()
-                            + SqlUtils.STR_RIGHT_BRACKET;
+                                + dimension.getAlias() + "-" + subTabName + SqlUtils.STR_POINT + dimension.getAlias()
+                                + SqlUtils.STR_RIGHT_BRACKET;
                         // 默认值和小数点处理
                         String convertMetric = this.metricIfNull(expression, dimension);
                         dimSb.append(convertMetric);
-                    }
-                    else {
+                    } else {
                         String subTabName = findRelativeAlias(dimension, subSqlList);
                         if (StringUtils.isNotEmpty(subTabName)) {
                             String expression = SqlUtils.STR_LEFT_BRACKET + tabName + SqlUtils.STR_POINT
-                                + dimension.getAlias() + "-" + subTabName + SqlUtils.STR_POINT + dimension.getAlias()
-                                + SqlUtils.STR_RIGHT_BRACKET + "/" + subTabName + SqlUtils.STR_POINT
-                                + dimension.getAlias();
+                                    + dimension.getAlias() + "-" + subTabName + SqlUtils.STR_POINT + dimension.getAlias()
+                                    + SqlUtils.STR_RIGHT_BRACKET + "/" + subTabName + SqlUtils.STR_POINT
+                                    + dimension.getAlias();
                             // 默认值和小数点处理
                             String convertMetric = this
-                                .metricIfNull("(" + SqlConvertUtils.divisionConvert(expression) + ")", dimension);
+                                    .metricIfNull("(" + SqlConvertUtils.divisionConvert(expression) + ")", dimension);
                             dimSb.append(convertMetric);
-                        }
-                        else {
+                        } else {
                             dimSb.append(0);
                         }
                     }
@@ -447,37 +438,34 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                         tabName = findRelativeAlias(dimension, subSqlList);
                     }
                     dimSb.append(tabName).append(SqlUtils.STR_POINT).append(dimension.getAlias());
-                }
-                else if (!Constants.DimensionType.TYPE_MAIN.equalsIgnoreCase(dimension.getDimensionType())) {
+                } else if (!Constants.DimensionType.TYPE_MAIN.equalsIgnoreCase(dimension.getDimensionType())) {
                     // fix 表名null
                     if (!CollectionUtils.isEmpty(subSqlList)) {
                         tabName = findRelativeAlias(dimension, subSqlList);
                     }
                     dimSb.append(tabName).append(SqlUtils.STR_POINT).append(dimension.getAlias());
-                }
-                else {
+                } else {
                     dimSb.append(tabName).append(SqlUtils.STR_POINT).append(dimension.getAlias());
                 }
                 if (!dimension.isHide() || !singleSql) {
                     fields.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias()).append(notes)
-                        .append(SqlUtils.STR_DOT);
+                            .append(SqlUtils.STR_DOT);
                 }
-            }
-            else if (singleSql && !CollectionUtils.isEmpty(dimension.getColumnGroup())) {
+            } else if (singleSql && !CollectionUtils.isEmpty(dimension.getColumnGroup())) {
                 String expression = SqlBuilderHelper.getColumnGroup(dimension.getColumnGroup(), expMap, null,
-                    singleSql);
+                        singleSql);
                 String convertMetric = this.metricIfNull("(" + SqlConvertUtils.divisionConvert(expression) + ")",
-                    dimension);
+                        dimension);
                 dimSb.append(convertMetric);
                 fields.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias()).append(notes)
-                    .append(SqlUtils.STR_DOT);
+                        .append(SqlUtils.STR_DOT);
             }
             // 缓存
             expMap.put(dimension.getAlias(), dimSb);
         }
 
         // hive的账期维度放后面
-        if (hivePeriodDim.length() > 0) {
+        if (!hivePeriodDim.isEmpty()) {
             fields.append(hivePeriodDim);
         }
         if (SqlBuilderHelper.checkDataPriv(getDataPrivCtrlInfo())) {
@@ -485,35 +473,33 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
             // 为空、则没有拖到组织维度表的字段
             if (!checkHaveOrgId()) {
                 orgStr.append(mainTb).append(SqlUtils.STR_POINT).append(CUSTOM_ORG_ID_ALIAS).append(SqlUtils.SQL_AS)
-                    .append(CUSTOM_ORG_ID_ALIAS).append(SqlUtils.STR_DOT);
+                        .append(CUSTOM_ORG_ID_ALIAS).append(SqlUtils.STR_DOT);
             }
             orgStr.append(mainTb).append(SqlUtils.STR_POINT).append(CUSTOM_PATH_CODE_ALIAS).append(SqlUtils.SQL_AS)
-                .append(CUSTOM_PATH_CODE_ALIAS).append(SqlUtils.STR_DOT);
+                    .append(CUSTOM_PATH_CODE_ALIAS).append(SqlUtils.STR_DOT);
             fields.insert(0, orgStr);
         }
 
         // 没有配置账期维度的调度sql且只有一个sql
         if (singleSql && !hasPeriod && Constants.SQL_TASK.equals(this.sqlMode)
-            && !"O".equalsIgnoreCase(this.scheduleType)) {
+                && !"O".equalsIgnoreCase(this.scheduleType)) {
             // 没有账期
             String periodStr;
             if ("D".equals(this.scheduleType)) {
                 periodStr = "${day_id} as day_id,";
-            }
-            else {
+            } else {
                 periodStr = "${month_id} as month_id,";
             }
 
             if (getDbType().equals(KeyValues.DS_HIVE)) {
                 fields.append(periodStr);
-            }
-            else {
+            } else {
                 fields.insert(0, periodStr);
             }
         }
 
         // 删掉逗号
-        if (fields.length() > 0) {
+        if (!fields.isEmpty()) {
             fields.deleteCharAt(fields.length() - 1);
         }
         sql.append(fields);
@@ -523,7 +509,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         for (SubQuerySqlQo subQuerySqlQo : subSqlList) {
             for (DatasetColumnQo columnQo : subQuerySqlQo.getMetricList()) {
                 if (dimension.getDimensionType().equals(subQuerySqlQo.getDimensionType())
-                    && columnQo.getAlias().equals(dimension.getAlias())) {
+                        && columnQo.getAlias().equals(dimension.getAlias())) {
                     return subQuerySqlQo.getTbAlisa();
                 }
             }
@@ -532,15 +518,14 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
     }
 
     protected String appendSqlConvert(boolean singleSql, List<DatasetColumnQo> metrics, String dimensionType,
-        List<DatasetColumnQo> dimensionList, List<DatasetConditionQo> condList, boolean needAppendPeriod,
-        OrgDimension replaceLevelColumn, ResultSql result) {
+                                      List<DatasetColumnQo> dimensionList, List<DatasetConditionQo> condList, boolean needAppendPeriod,
+                                      OrgDimension replaceLevelColumn, ResultSql result) {
         List<DatasetColumnQo> growthOrTotalsMetric = null;
         SqlComponent component = new SqlComponent();
         Map<String, Map<String, String>> alias;
         if (this.params.judgeIndexView()) {
             alias = getIndexViewSql(component, metrics, dimensionList);
-        }
-        else {
+        } else {
             // 检查是否有同环比和月/年累计
             growthOrTotalsMetric = checkGrowthOrTotal(metrics, dimensionType);
             Map<String, List<MetricsDimensionPathVo>> pathsMap = metrics.get(0).getPathsMap();
@@ -550,10 +535,9 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         boolean single = singleSql && CollectionUtils.isEmpty(growthOrTotalsMetric);
         if (params.getDetailTableId() != null) {
             component.field.append(" * ");
-        }
-        else {
+        } else {
             this.appendOutField(single, metrics, dimensionType, dimensionList, alias, component.field,
-                replaceLevelColumn, null, false);
+                    replaceLevelColumn, null, false);
         }
         this.appendWhere(single, component.where, metrics, dimensionType, condList, alias, null, null, null);
         if (result.isGroupBy) {
@@ -571,13 +555,13 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         List<SubQuerySqlQo> subSqlList = new ArrayList<>();
         if (!CollectionUtils.isEmpty(growthOrTotalsMetric)) {
             Map<String, List<DatasetColumnQo>> funcGroups = growthOrTotalsMetric.stream()
-                .collect(Collectors.groupingBy(DatasetColumnQo::getFunc));
+                    .collect(Collectors.groupingBy(DatasetColumnQo::getFunc));
 
             // 按同环比分类，比上期/比上期%，统计账期条件一样的，应该分为一组
             funcGroups.forEach((key, values) -> {
                 // 有同环比或者月/年累计
                 subSqlGrowthOrTotal(subSqlList, false, values, dimensionType, dimensionList, condList, needAppendPeriod,
-                    replaceLevelColumn, scheduleType);
+                        replaceLevelColumn, scheduleType);
             });
             // 年累计/月累计，没有其他表字段时，不需要left join两段子查询
             if (growthOrTotalsMetric.size() == metrics.size()) {
@@ -592,7 +576,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     }
                     // 合并月年累计
                     return mergeRelativeDims(singleSql, dimensionList, subSqlList.get(0).getSql(),
-                        subSqlList.subList(0, subSqlSize - 1), replaceLevelColumn, subQueryToTmTab ? result : null);
+                            subSqlList.subList(0, subSqlSize - 1), replaceLevelColumn, subQueryToTmTab ? result : null);
                 }
             }
             // 合并汇总表，组织层级字段已经取过别名
@@ -607,7 +591,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         }
         // 合并同环比或者月年累计
         return mergeRelativeDims(singleSql, dimensionList, component.swapSql().toString(), subSqlList,
-            replaceLevelColumn, subQueryToTmTab ? result : null);
+                replaceLevelColumn, subQueryToTmTab ? result : null);
     }
 
     /**
@@ -627,7 +611,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
 
     @Override
     protected Map<String, Map<String, String>> joinTables(Map<String, List<MetricsDimensionPathVo>> pathsMap,
-        String dataPrivPathKey, boolean needAppendPeriod, SqlComponent component) {
+                                                          String dataPrivPathKey, boolean needAppendPeriod, SqlComponent component) {
         Map<String, Map<String, String>> alias = new HashMap<>();
         // 判断是否有维表关联
         boolean hasOrgTable = SqlBuilderHelper.hasOrgTable(getDataPrivCtrlInfo(), pathsMap);
@@ -653,7 +637,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
 
     @Override
     protected void orderByColumnList(StringBuilder result, List<DatasetColumnQo> dimensionList,
-        List<DatasetColumnQo> metrics, Map<String, Map<String, String>> alias) {
+                                     List<DatasetColumnQo> metrics, Map<String, Map<String, String>> alias) {
         if (!CollectionUtils.isEmpty(dimensionList)) {
             StringBuilder sql = new StringBuilder();
             for (DatasetColumnQo qo : dimensionList) {
@@ -665,16 +649,14 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                         if (null != periodColumn) {
                             String tbName = SqlBuilderHelper.getAliasName(alias, periodColumn.getMetaDataId());
                             dimSb.append(tbName).append(SqlUtils.STR_POINT).append(periodColumn.getColumnCode());
-                        }
-                        else {
+                        } else {
                             fieldPeriod(dimSb, qo);
                         }
                         sql.append(dimSb).append(SqlUtils.STR_BLANK).append(qo.getSortOrder()).append(SqlUtils.STR_DOT);
-                    }
-                    else if (!Constants.APP_TYPE_METRICS.equals(qo.getAppType())) {
+                    } else if (!Constants.APP_TYPE_METRICS.equals(qo.getAppType())) {
                         String tbName = SqlBuilderHelper.getAliasName(alias, qo.getTableId());
                         sql.append(tbName).append(SqlUtils.STR_POINT).append(qo.getColumnCode())
-                            .append(SqlUtils.STR_BLANK).append(qo.getSortOrder()).append(SqlUtils.STR_DOT);
+                                .append(SqlUtils.STR_BLANK).append(qo.getSortOrder()).append(SqlUtils.STR_DOT);
                     }
                 }
             }
@@ -688,18 +670,18 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
     /**
      * union all 的输出字段拼接
      *
-     * @param singleSql 是否为单个sql
-     * @param metrics 度量
-     * @param dimensionType 相对维度字段别名
-     * @param dimensionList 输出字段
-     * @param aliasMap 别名
-     * @param fieldSql 输出字段拼接
+     * @param singleSql          是否为单个sql
+     * @param metrics            度量
+     * @param dimensionType      相对维度字段别名
+     * @param dimensionList      输出字段
+     * @param aliasMap           别名
+     * @param fieldSql           输出字段拼接
      * @param replaceLevelColumn 层级替换字段
      */
     @Override
     protected void appendOutField(boolean singleSql, List<DatasetColumnQo> metrics, String dimensionType,
-        List<DatasetColumnQo> dimensionList, Map<String, Map<String, String>> aliasMap, StringBuilder fieldSql,
-        OrgDimension replaceLevelColumn, SqlFuncEnum funcEnum, boolean joinTimeSql) {
+                                  List<DatasetColumnQo> dimensionList, Map<String, Map<String, String>> aliasMap, StringBuilder fieldSql,
+                                  OrgDimension replaceLevelColumn, SqlFuncEnum funcEnum, boolean joinTimeSql) {
         // 划小架构表最细粒度字段
         DatasetColumnQo orgDimColumn = SqlBuilderHelper.getOrgDimensionMinColumn(getDataPrivCtrlInfo());
         DatasetColumnQo metric = metrics.get(0);
@@ -714,8 +696,8 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
             StringBuilder dimSb = new StringBuilder();
             // 单个sql的时候需要注释
             String notes = !ignoreNotesTypeSets.contains(getDbType()) && singleSql
-                ? SqlBuilderHelper.fieldNotes(dimension.getDataName())
-                : "";
+                    ? SqlBuilderHelper.fieldNotes(dimension.getDataName())
+                    : "";
             // 是否有拖到最细细度组织维度字段
             if (!ObjectUtils.isEmpty(orgDimColumn) && orgDimColumn.getColumnId().equals(dimension.getColumnId())) {
                 haveOrgId(true);
@@ -728,8 +710,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     String columnExp;
                     if (joinTimeSql) {
                         columnExp = "tm.acct";
-                    }
-                    else {
+                    } else {
                         String tbName = SqlBuilderHelper.getAliasName(aliasMap, periodColumn.getMetaDataId());
                         columnExp = tbName + SqlUtils.STR_POINT + periodColumn.getColumnCode();
                     }
@@ -738,33 +719,30 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     dimension.setColumnType(intType);
                     // 如果是同比，环比，账期字段需要特殊处理
                     dimSb.append(this.getAcctColumnExp(columnExp, funcEnum, periodColumn));
-                }
-                else {
+                } else {
                     fieldPeriod(dimSb, dimension);
                 }
                 // hive数据源的账期字段抽取出来放到所有字段最后面
                 if (getDbType().equals(KeyValues.DS_HIVE) && !"O".equals(this.scheduleType)) {
                     hivePeriodDim.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias())
-                        .append(SqlUtils.STR_DOT);
+                            .append(SqlUtils.STR_DOT);
                     continue;
                 }
                 // 注释
                 fieldSql.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias()).append(notes)
-                    .append(SqlUtils.STR_DOT);
-            }
-            else if (Constants.APP_TYPE_DIMENSION.equals(dimension.getAppType())) {
+                        .append(SqlUtils.STR_DOT);
+            } else if (Constants.APP_TYPE_DIMENSION.equals(dimension.getAppType())) {
                 // 维度字段
                 // 虚拟维度对象字段替换
                 this.replaceVColumn(dimension, metric);
                 Map<String, String> alias = SqlBuilderHelper.getAliasMap(metric, dimension, aliasMap, !params.judgeIndexView());
                 if (autoLevelGroup && isLevelColumn(dimension)) {
                     if (dimension.getTableId().equals(replaceLevelColumn.getMetaDataId())
-                        && (dimension.getColumnCode().equals(replaceLevelColumn.getOrgIdColumnCode())
+                            && (dimension.getColumnCode().equals(replaceLevelColumn.getOrgIdColumnCode())
                             || dimension.getColumnCode().equals(replaceLevelColumn.getOrgNameColumnCode()))) {
                         appendLevelColumnField(dimSb, replaceLevelColumn,
-                            alias.get(String.valueOf(dimension.getTableId())));
-                    }
-                    else {
+                                alias.get(String.valueOf(dimension.getTableId())));
+                    } else {
                         continue;
                     }
                     // 避免重复添加
@@ -777,60 +755,55 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     fieldSql.append("CASE ");
                     for (Map map : dimension.getEnumList()) {
                         fieldSql.append(" WHEN ").append(alias.get(String.valueOf(dimension.getTableId())))
-                            .append(SqlUtils.STR_POINT).append(dimension.getColumnCode()).append(SqlUtils.STR_EQUAL)
-                            .append("'").append(map.get("code")).append("'").append(" THEN ").append("'")
-                            .append(map.get("name")).append("'");
+                                .append(SqlUtils.STR_POINT).append(dimension.getColumnCode()).append(SqlUtils.STR_EQUAL)
+                                .append("'").append(map.get("code")).append("'").append(" THEN ").append("'")
+                                .append(map.get("name")).append("'");
                     }
                     fieldSql.append(" END AS ").append(dimension.getAlias()).append(SqlUtils.STR_DOT);
-                }
-                else {
+                } else {
                     dimSb.append(alias.get(String.valueOf(dimension.getTableId()))).append(SqlUtils.STR_POINT)
-                        .append(dimension.getColumnCode());
+                            .append(dimension.getColumnCode());
                     fieldSql.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias()).append(notes)
-                        .append(SqlUtils.STR_DOT);
+                            .append(SqlUtils.STR_DOT);
                 }
-            }
-            else if (Constants.APP_TYPE_METRICS.equals(dimension.getAppType())
-                && dimensionType.equalsIgnoreCase(dimension.getDimensionType())
-                && CollectionUtils.isEmpty(dimension.getColumnGroup())) {
+            } else if (Constants.APP_TYPE_METRICS.equals(dimension.getAppType())
+                    && dimensionType.equalsIgnoreCase(dimension.getDimensionType())
+                    && CollectionUtils.isEmpty(dimension.getColumnGroup())) {
                 // 虚拟字段
                 replaceVCondition(metric);
                 List<String> funs = metrics.stream().map(DatasetColumnQo::getFunc).collect(Collectors.toList());
                 List<Long> columnIds = metrics.stream().map(DatasetColumnQo::getColumnId).collect(Collectors.toList());
                 List<String> columnCodes = metrics.stream().map(DatasetColumnQo::getColumnCode)
-                    .collect(Collectors.toList());
+                        .collect(Collectors.toList());
                 List<Long> tablesIds = metrics.stream().map(DatasetColumnQo::getTableId).collect(Collectors.toList());
                 // 度量字段，没有的用0输出
                 if (funs.contains(dimension.getFunc()) && columnIds.contains(dimension.getColumnId())
-                    && columnCodes.contains(dimension.getColumnCode()) && tablesIds.contains(dimension.getTableId())) {
+                        && columnCodes.contains(dimension.getColumnCode()) && tablesIds.contains(dimension.getTableId())) {
                     AbstractFuncParser parser = SqlBuilderFactory.getFuncParser(dimension);
                     parser.initParams(this, getDbType(), dimension, metrics, aliasMap, new LinkedHashMap<>());
                     parser.setOutField(dimSb);
-                }
-                else {
+                } else {
                     dimSb.append("0");
                 }
                 // 隐藏字段过滤
                 if (!dimension.isHide() || !singleSql) {
                     fieldSql.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias()).append(notes)
-                        .append(SqlUtils.STR_DOT);
+                            .append(SqlUtils.STR_DOT);
                 }
-            }
-            else if (Constants.APP_TYPE_METRICS.equals(dimension.getAppType())
-                && !dimensionType.equalsIgnoreCase(dimension.getDimensionType())
-                && CollectionUtils.isEmpty(dimension.getColumnGroup())) {
+            } else if (Constants.APP_TYPE_METRICS.equals(dimension.getAppType())
+                    && !dimensionType.equalsIgnoreCase(dimension.getDimensionType())
+                    && CollectionUtils.isEmpty(dimension.getColumnGroup())) {
                 dimSb.append("0");
                 fieldSql.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias()).append(notes)
-                    .append(SqlUtils.STR_DOT);
-            }
-            else if (singleSql && !CollectionUtils.isEmpty(dimension.getColumnGroup())) {
+                        .append(SqlUtils.STR_DOT);
+            } else if (singleSql && !CollectionUtils.isEmpty(dimension.getColumnGroup())) {
                 String expression = SqlBuilderHelper.getColumnGroup(dimension.getColumnGroup(), expMap, null,
-                    singleSql);
+                        singleSql);
                 String convertMetric = this.metricIfNull("(" + SqlConvertUtils.divisionConvert(expression) + ")",
-                    dimension);
+                        dimension);
                 dimSb.append(convertMetric);
                 fieldSql.append(dimSb).append(SqlUtils.SQL_AS).append(dimension.getAlias()).append(notes)
-                    .append(SqlUtils.STR_DOT);
+                        .append(SqlUtils.STR_DOT);
             }
             // 缓存
             expMap.put(dimension.getAlias(), dimSb);
@@ -848,17 +821,16 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                 Long userId = this.params.getCreator();
                 StringBuilder orgStr = new StringBuilder();
                 orgStr.append("'").append(OrganizationUtil.getOrgIdByUserId(userId)).append("'").append(SqlUtils.SQL_AS)
-                    .append(CUSTOM_ORG_ID_ALIAS).append(SqlUtils.STR_DOT);
+                        .append(CUSTOM_ORG_ID_ALIAS).append(SqlUtils.STR_DOT);
                 fieldSql.insert(0, orgStr);
-            }
-            else {
+            } else {
                 // 拖到组织维度表字段了、但是没有拖到组织id
                 if (!checkHaveOrgId()) {
                     StringBuilder orgStr = new StringBuilder();
                     String tbName = SqlBuilderHelper.getAliasName(aliasMap, orgDimColumn.getTableId(),
-                        orgDimColumn.getPath());
+                            orgDimColumn.getPath());
                     orgStr.append(tbName).append(SqlUtils.STR_POINT).append(orgDimColumn.getColumnCode())
-                        .append(SqlUtils.SQL_AS).append(CUSTOM_ORG_ID_ALIAS).append(SqlUtils.STR_DOT);
+                            .append(SqlUtils.SQL_AS).append(CUSTOM_ORG_ID_ALIAS).append(SqlUtils.STR_DOT);
                     fieldSql.insert(0, orgStr);
                 }
             }
@@ -866,20 +838,18 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
 
         // 没有配置账期维度的调度sql且只有一个sql
         if (singleSql && !hasPeriod && Constants.SQL_TASK.equals(this.sqlMode)
-            && !"O".equalsIgnoreCase(this.scheduleType)) {
+                && !"O".equalsIgnoreCase(this.scheduleType)) {
             // 没有账期
             String periodStr;
             if ("D".equals(this.scheduleType)) {
                 periodStr = "${day_id} as day_id,";
-            }
-            else {
+            } else {
                 periodStr = "${month_id} as month_id,";
             }
 
             if (getDbType().equals(KeyValues.DS_HIVE)) {
                 fieldSql.append(periodStr);
-            }
-            else {
+            } else {
                 fieldSql.insert(0, periodStr);
             }
         }
@@ -895,7 +865,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         if ("=".equalsIgnoreCase(condPeriodExp.getOperator().trim())) {
             periodExpressionFromMetrics.removeIf(next -> {
                 return next.getOperator().trim().equalsIgnoreCase(condPeriodExp.getOperator().trim())
-                    && condPeriodExp.getPeriodScope().get(0).equalsIgnoreCase(next.getPeriodScope().get(0));
+                        && condPeriodExp.getPeriodScope().get(0).equalsIgnoreCase(next.getPeriodScope().get(0));
             });
         }
     }
@@ -910,15 +880,15 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
      */
     @Override
     protected void appendWhere(boolean singleSql, StringBuilder sqlWhere, List<DatasetColumnQo> metrics,
-        String dimensionType, List<DatasetConditionQo> condList, Map<String, Map<String, String>> aliasMap,
-        Map<String, List<MetricsDimensionPathVo>> mainTbPaths, Map<String, String> temTableAlias,
-        SqlFuncEnum funcEnum) {
+                               String dimensionType, List<DatasetConditionQo> condList, Map<String, Map<String, String>> aliasMap,
+                               Map<String, List<MetricsDimensionPathVo>> mainTbPaths, Map<String, String> temTableAlias,
+                               SqlFuncEnum funcEnum) {
         Map<String, List<MetricsDimensionPathVo>> pathsMap = metrics.get(0).getPathsMap();
         StringBuilder sql = new StringBuilder();
         PeriodExpression condPeriodExp = null;
         // 全局度量条件
         List<DatasetConditionQo> acctConds = CollectionUtils.isEmpty(condList) ? Collections.emptyList()
-            : condList.stream().filter(obj -> KeyValues.YES_VALUE_1.equals(obj.getIsAcct()))
+                : condList.stream().filter(obj -> KeyValues.YES_VALUE_1.equals(obj.getIsAcct()))
                 .collect(Collectors.toList());
         // 读取度量上的账期范围
         List<PeriodExpression> periodExpressionFromMetrics = this.getPeriodExpressionFromMetrics(funcEnum, metrics,
@@ -929,7 +899,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
             for (DatasetConditionQo conditionQo : condList) {
                 // 账期字段替换 月账/日账
                 if (Constants.YES_VALUE_1.equals(conditionQo.getIsAcct())
-                    && StringUtils.isNoneBlank(conditionQo.getCycleType())) {
+                        && StringUtils.isNoneBlank(conditionQo.getCycleType())) {
                     StringBuilder periodSql = new StringBuilder();
                     condPeriodExp = new PeriodExpression(conditionQo);
                     // 从paths路径上面的表取出账期字段
@@ -986,8 +956,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                             periodSql.append(StringUtil.join(" or ", periodMetricList.toArray(new String[0])));
                             periodSql.append(SqlUtils.STR_RIGHT_BRACKET);
                         }
-                    }
-                    else {
+                    } else {
                         Set<Long> ids = DealConditionParamUtils.getTableIdsByMap(aliasMap, this.allPeriod);
                         // 度量账期去重
                         if (!periodExpressionFromMetrics.isEmpty()) {
@@ -1005,13 +974,11 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     if (periodSql.length() > 0) {
                         // sql.append(SqlUtils.STR_LEFT_BRACKET).append(periodSql).append(SqlUtils.STR_RIGHT_BRACKET);
                         sql.append(periodSql);
-                    }
-                    else {
+                    } else {
                         sql.append("1=1");
                     }
                     continue;
-                }
-                else if (StringUtils.isNotEmpty(conditionQo.getBusinessType())) {
+                } else if (StringUtils.isNotEmpty(conditionQo.getBusinessType())) {
                     String timeSql = getWhereSqlByTime(conditionQo, aliasMap);
                     sql.append(timeSql.length() > 0 ? timeSql : "1 = 1");
                     continue;
@@ -1025,11 +992,10 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     BeanUtils.copyProperties(conditionQo, newDatasetColumnQo, "id", "parent", "root");
                     if (mainTbPaths != null) {
                         tableAlias = SqlBuilderHelper.getAliasFromTempTableAndMetric(metrics.get(0), newDatasetColumnQo,
-                            mainTbPaths, aliasMap, temTableAlias);
-                    }
-                    else {
+                                mainTbPaths, aliasMap, temTableAlias);
+                    } else {
                         Map<String, String> tableAliasMap = SqlBuilderHelper.getAliasMap(metrics.get(0),
-                            newDatasetColumnQo, aliasMap, !params.judgeIndexView());
+                                newDatasetColumnQo, aliasMap, !params.judgeIndexView());
                         tableAlias = tableAliasMap.get(String.valueOf(conditionQo.getTableId()));
                     }
                 }
@@ -1054,7 +1020,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     // 去除重复账期条件
                     Set<PeriodExpression> set = new TreeSet<>((o1, o2) -> {
                         if (o1.getOperator().equalsIgnoreCase(o2.getOperator())
-                            && o1.getPeriodScope().containsAll(o2.getPeriodScope())) {
+                                && o1.getPeriodScope().containsAll(o2.getPeriodScope())) {
                             return 0;
                         }
                         return 1;
@@ -1071,8 +1037,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     sql.append(SqlUtils.STR_LEFT_BRACKET);
                     sql.append(StringUtil.join(" or ", periodMetricList.toArray(new String[0])));
                     sql.append(SqlUtils.STR_RIGHT_BRACKET);
-                }
-                else {
+                } else {
                     condPeriodExp = getMetricPeriodExpression(column, funcEnum);
                     if (null != condPeriodExp) {
                         if (sql.length() > 0) {
@@ -1095,8 +1060,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         // 拼接其他的条件
         if (sqlWhere.length() > 0 && sql.length() > 0) {
             sqlWhere.append(SqlUtils.SQL_AND).append(sql);
-        }
-        else {
+        } else {
             sqlWhere.append(sql);
         }
     }
@@ -1131,8 +1095,8 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
      */
     @Override
     protected void appendGroupBy(List<DatasetColumnQo> metrics, List<DatasetColumnQo> dimensionList,
-        StringBuilder groupSql, Map<String, Map<String, String>> aliasMap, OrgDimension replaceLevelColumn,
-        boolean joinTimeSql) {
+                                 StringBuilder groupSql, Map<String, Map<String, String>> aliasMap, OrgDimension replaceLevelColumn,
+                                 boolean joinTimeSql) {
         // 权限控制，划小架构维度字段id拼接。维度拖到了组织维度表的字段，但是不包含组织id
         DatasetColumnQo orgDimColumn = SqlBuilderHelper.getOrgDimensionMinColumn(getDataPrivCtrlInfo());
         if (!ObjectUtils.isEmpty(orgDimColumn) && !checkHaveOrgId()) {
@@ -1141,14 +1105,13 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
             sql.append(tbName).append(SqlUtils.STR_POINT).append(orgDimColumn.getColumnCode()).append(SqlUtils.STR_DOT);
             if (groupSql.length() > 0) {
                 groupSql.insert(0, sql);
-            }
-            else {
+            } else {
                 groupSql.append(sql);
             }
         }
 
         List<DatasetColumnQo> dimensionLists = dimensionList.stream()
-            .filter(entity -> Constants.APP_TYPE_DIMENSION.equals(entity.getAppType())).collect(Collectors.toList());
+                .filter(entity -> Constants.APP_TYPE_DIMENSION.equals(entity.getAppType())).collect(Collectors.toList());
         for (DatasetColumnQo dimension : dimensionLists) {
             if (Constants.YES_VALUE_1.equals(dimension.getIsAcct())) {
                 // 账期字段,前端只能拖一个虚拟的账期
@@ -1157,16 +1120,14 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     if (joinTimeSql) {
                         // 如果是一次性年/月累计，带有账期维度的，需要关联时间维表查询，group by要换成时间维表的字段
                         groupSql.append("tm.acct").append(SqlUtils.STR_DOT);
-                    }
-                    else {
+                    } else {
                         String tbName = SqlBuilderHelper.getAliasName(aliasMap, periodColumn.getMetaDataId());
                         groupSql.append(tbName).append(SqlUtils.STR_POINT).append(periodColumn.getColumnCode())
-                            .append(SqlUtils.STR_DOT);
+                                .append(SqlUtils.STR_DOT);
                     }
                 }
                 // 如果没有账期字段就不用拼接进分组里面
-            }
-            else if (Constants.APP_TYPE_DIMENSION.equals(dimension.getAppType())) {
+            } else if (Constants.APP_TYPE_DIMENSION.equals(dimension.getAppType())) {
                 // 虚拟对象
                 this.replaceVColumn(dimension, metrics.get(0));
                 Map<String, String> alias = SqlBuilderHelper.getAliasMap(metrics.get(0), dimension, aliasMap, !params.judgeIndexView());
@@ -1177,15 +1138,14 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     // }
                     // else
                     if (dimension.getTableId().equals(replaceLevelColumn.getMetaDataId())
-                        && (dimension.getColumnCode().equals(replaceLevelColumn.getOrgIdColumnCode())
+                            && (dimension.getColumnCode().equals(replaceLevelColumn.getOrgIdColumnCode())
                             || dimension.getColumnCode().equals(replaceLevelColumn.getOrgNameColumnCode()))) {
                         appendLevelColumnGroup(groupSql, replaceLevelColumn,
-                            alias.get(String.valueOf(dimension.getTableId())));
+                                alias.get(String.valueOf(dimension.getTableId())));
                     }
-                }
-                else {
+                } else {
                     groupSql.append(alias.get(String.valueOf(dimension.getTableId()))).append(SqlUtils.STR_POINT)
-                        .append(dimension.getColumnCode()).append(SqlUtils.STR_DOT);
+                            .append(dimension.getColumnCode()).append(SqlUtils.STR_DOT);
                 }
             }
         }
@@ -1197,20 +1157,20 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
     @Override
     protected void fieldPeriod(StringBuilder fieldSql, DatasetColumnQo dimension) {
         String periodStr = AcctTimeUtil.getAcctValAddQuotOutPubMode(this.scheduleType, dimension.getCycleType(),
-            dimension.getColumnType(), outPutMode);
+                dimension.getColumnType(), outPutMode);
         fieldSql.append(periodStr);
     }
 
     /**
      * 账期替换
      *
-     * @param qo 虚拟账期字段
-     * @param paths 度量路径上的表参数
+     * @param qo         虚拟账期字段
+     * @param paths      度量路径上的表参数
      * @param tableAlias 表别名
      * @return 全局条件账期
      */
     protected Map<String, String> condListPeriods(DatasetConditionQo qo, List<MetricsDimensionPathVo> paths,
-        Map<String, String> tableAlias) {
+                                                  Map<String, String> tableAlias) {
         Map<String, String> map = new HashMap<>();
         StringBuilder strB;
         for (MetricsDimensionPathVo path : paths) {
@@ -1221,8 +1181,8 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     String value = replaceValues(qo, column);
                     String tableName = tableAlias.get(String.valueOf(path.getSrcTableId()));
                     strB.append(tableName).append(SqlUtils.STR_POINT).append(column.getColumnCode())
-                        .append(SqlUtils.STR_BLANK).append(qo.getCondOperator()).append(SqlUtils.STR_BLANK)
-                        .append(value);
+                            .append(SqlUtils.STR_BLANK).append(qo.getCondOperator()).append(SqlUtils.STR_BLANK)
+                            .append(value);
                     map.put(String.valueOf(path.getSrcTableId()), strB.toString());
                 }
             }
@@ -1233,8 +1193,8 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                     String value = replaceValues(qo, column);
                     String tableName = tableAlias.get(String.valueOf(path.getTgtTableId()));
                     strB.append(tableName).append(SqlUtils.STR_POINT).append(column.getColumnCode())
-                        .append(SqlUtils.STR_BLANK).append(qo.getCondOperator()).append(SqlUtils.STR_BLANK)
-                        .append(value);
+                            .append(SqlUtils.STR_BLANK).append(qo.getCondOperator()).append(SqlUtils.STR_BLANK)
+                            .append(value);
                     map.put(String.valueOf(path.getTgtTableId()), strB.toString());
                 }
             }
@@ -1254,7 +1214,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
      */
     private void replaceVCondition(DatasetConditionQo condition, DatasetColumnQo metric) {
         if (condition.getObjectId() != null
-            && Constants.OBJ_TREE_RELA_TYPE_V.equalsIgnoreCase(condition.getRelaType())) {
+                && Constants.OBJ_TREE_RELA_TYPE_V.equalsIgnoreCase(condition.getRelaType())) {
             DatasetColumnQo virtualObjColumn = metric.getVirtualObjColumnMap().get(condition.getObjectId());
             if (virtualObjColumn != null) {
                 condition.setTableId(virtualObjColumn.getTableId());
@@ -1273,7 +1233,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
      */
     private void replaceVColumn(DatasetColumnQo dimension, DatasetColumnQo metric) {
         if (dimension.getObjectId() != null
-            && Constants.OBJ_TREE_RELA_TYPE_V.equalsIgnoreCase(dimension.getRelaType())) {
+                && Constants.OBJ_TREE_RELA_TYPE_V.equalsIgnoreCase(dimension.getRelaType())) {
             DatasetColumnQo virtualObjColumn = metric.getVirtualObjColumnMap().get(dimension.getObjectId());
             if (virtualObjColumn != null) {
                 dimension.setTableId(virtualObjColumn.getTableId());
@@ -1293,7 +1253,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         if (!CollectionUtils.isEmpty(metric.getCondList())) {
             for (DatasetConditionQo subCond : metric.getCondList()) {
                 if (subCond.getObjectId() != null
-                    && Constants.OBJ_TREE_RELA_TYPE_V.equalsIgnoreCase(subCond.getRelaType())) {
+                        && Constants.OBJ_TREE_RELA_TYPE_V.equalsIgnoreCase(subCond.getRelaType())) {
                     this.replaceVCondition(subCond, metric);
                 }
             }
@@ -1301,7 +1261,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
     }
 
     private Map<String, Map<String, String>> getIndexViewSql(SqlComponent component, List<DatasetColumnQo> metrics,
-        List<DatasetColumnQo> dimensionList) {
+                                                             List<DatasetColumnQo> dimensionList) {
         Map<String, Map<String, String>> alias = new HashMap<>(8);
         Map<String, String> alia = new HashMap<>(2);
         ObjKeyTableRelaVo relVo;
@@ -1311,7 +1271,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         alias.put(tableId.toString(), alia);
         String fromTableName;
         component.join.append(getTableName(metrics.get(0).getTableCode(), metrics.get(0).getTableId()))
-            .append(SqlUtils.STR_BLANK).append(mainTb);
+                .append(SqlUtils.STR_BLANK).append(mainTb);
         for (DatasetColumnQo q : dimensionList) {
             // 不是维度/是主表/虚拟维度的不需要追加left join
             if (!Constants.APP_TYPE_DIMENSION.equals(q.getAppType()) || tableId.equals(q.getTableId())) {
@@ -1336,8 +1296,8 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
                 alia.put(q.getTableId().toString(), fromTableName);
                 alias.put(q.getTableId().toString(), alia);
                 component.join.append(SqlUtils.SQL_LEFT_JOIN).append(getTableName(q.getTableCode(), q.getTableId()))
-                    .append(SqlUtils.STR_BLANK).append(fromTableName).append(SqlUtils.SQL_ON)
-                    .append(getLeftJoinOn(relVo.getKeyColumnRelas(), mainTb, fromTableName));
+                        .append(SqlUtils.STR_BLANK).append(fromTableName).append(SqlUtils.SQL_ON)
+                        .append(getLeftJoinOn(relVo.getKeyColumnRelas(), mainTb, fromTableName));
             }
         }
         return alias;
@@ -1355,7 +1315,7 @@ public abstract class AbstractRelativeAndLevelSqlBuilder extends AbstractGrowthO
         StringBuffer on = new StringBuffer();
         for (ObjKeyColumnRelaVo v : relList) {
             on.append(t1).append(SqlUtils.STR_POINT).append(v.getColumnCode()).append(SqlUtils.STR_EQUAL).append(t2)
-                .append(SqlUtils.STR_POINT).append(v.getRelaColumnCode()).append(SqlUtils.SQL_AND);
+                    .append(SqlUtils.STR_POINT).append(v.getRelaColumnCode()).append(SqlUtils.SQL_AND);
         }
         // 移除最后一个" AND "
         if (on.toString().endsWith(SqlUtils.SQL_AND)) {
